feat: add parser script
